@@ -37,6 +37,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Mockito Inline para evitar avisos de instrumentação -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -51,6 +59,7 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Djdk.attach.allowAttachSelf=true -Xshare:off</argLine>
                 </configuration>
             </plugin>
 
@@ -77,8 +86,5 @@
             -->
 
         </plugins>
-
-
-
     </build>
 </project>
